# warehouse_monitoring

./: .pre-commit-config.yaml  pyproject.toml
warehouse_monitoring/: db.sqlite3  manage.py
warehouse_monitoring/accounts/migrations/: 0001_initial.py
warehouse_monitoring/warehouse/: admin.py  models.py  serializers.py  test.py  urls.py  views.py
warehouse_monitoring/warehouse_monitoring/: asgi.py  settings.py  urls.py  wsgi.py
